--- a/src/index.css
+++ b/src/index.css
@@ -24,3 +24,20 @@ code {
 img.large {
   max-width: 100%;
 }
+
+img.thumbnail {
+  height: 80px;
+}
+
+.small-container {
+  max-width: 600px;
+}
+
+.checkout-steps > div {
+  border-bottom: 0.2rem solid #a0a0a0;
+  color: #a0a0a0;
+}
+.checkout-steps > div.active {
+  border-bottom: 0.2rem solid #fab300;
+  color: #fab300;
+}
